--- a/other_page_context.css
+++ b/other_page_context.css
@@ -30,6 +30,8 @@
 .udemy{text-align:center;padding:30px 10px;font-family:sans-serif,sans-serif;font-weight:bolder;font-size:3.5em;color:#111;}
 .tcpschoolbox{margin:0 auto;width:300px;height: 180px;background-color:#fff;}
 .tcpschool{text-align:center;padding:30px 10px;font-family:sans-serif,sans-serif;font-weight:bolder;font-size:2.7em;color:#2520B8;}
-.youtubeimage{width:237.6px; height:167.4px;}
+.youtubeimage{width:190px; height:134px;}
 .box{margin:0 auto;width:300px;height: 180px;background-color:#fff;font-family:sans-serif,sans-serif;}
 .githubimage{width:252px; height:126px;}
+.kmoocbox{margin:0 auto;width:300px;height: 180px;background-color:#fff;}
+.kmooc{text-align:center;padding:30px 10px;font-family:sans-serif,sans-serif;font-weight:bolder;font-size:3.5em;color:#737373;}
