--- a/head.css
+++ b/head.css
@@ -1,4 +1,4 @@
-
+  <meta property="og:image" content="https://cofls6581.github.io/codingwithme/프레젠테이션1.jpg" >
 
 #whole_wrapper{position:relative}
 
